# AdventOfCode

2018/: CMakeLists.txt
2020/: CMakeLists.txt
2020/day1/: main.cpp
